--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,14 +6,17 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./button": "./src/button.tsx",
+    "./global.css": "./src/styles/global.css",
+    "./lib/*": "./src/lib/*.ts",
+    "./components/*": "./src/components/*.tsx",
     "./card": "./src/card.tsx"
   },
   "scripts": {
     "build": "tailwindcss -i ./src/styles.css -o ./dist/index.css",
     "lint": "eslint src/",
     "dev": "tailwindcss -i ./src/styles.css -o ./dist/index.css --watch",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "ui:add": "npx shadcn-ui@latest add"
   },
   "peerDependencies": {
     "react": "^18.2.0"
@@ -30,5 +33,13 @@
     "react": "^18.2.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.368.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
