--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,11 +7,12 @@
     "dev": "next dev --turbo",
     "lint": "eslint . --max-warnings 0",
     "start": "next start",
+    "clean": "rm -rf .next && rm -rf .turbo && rm -rf node_modules",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@repo/ui": "*",
-    "next": "^14.1.1",
+    "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
