--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/ui": "*",
     "next": "^14.2.0",
+    "next-auth": "^5.0.0-beta.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
