ref: added default api router with auth middleware

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -37,6 +37,14 @@ COPY tailwind.config.ts tailwind.config.ts
 
 # ARG TURBO_TOKEN
 # ENV TURBO_TOKEN=$TURBO_TOKEN
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ARG AUTH_GOOGLE_ID
+ENV AUTH_GOOGLE_ID=$AUTH_GOOGLE_ID
+ARG AUTH_GOOGLE_SECRET
+ENV AUTH_GOOGLE_SECRET=$AUTH_GOOGLE_SECRET
+ARG AUTH_SECRET
+ENV AUTH_SECRET=$AUTH_SECRET
 
 RUN yarn turbo build --filter=web...
 
