--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,14 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/types": "*",
     "@repo/ui": "*",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-encode": "^1.0.1",
     "next": "^14.2.0",
     "next-auth": "^5.0.0-beta.16",
     "react": "^18.2.0",
@@ -22,6 +29,9 @@
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jwt-encode": "^1.0.3",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
