--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "@repo/logger": "*",
+    "@repo/types": "*",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
@@ -40,4 +44,3 @@
     "typescript": "^5.3.3"
   }
 }
-
