--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -49,6 +49,7 @@
     "@nextui-org/spinner": "^2.0.25",
     "@nextui-org/system": "^2.1.0",
     "@nextui-org/theme": "^2.2.0",
+    "@nextui-org/user": "^2.0.26",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
