fix: fixed eslint

--- a/turbo.json
+++ b/turbo.json
@@ -2,11 +2,13 @@
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "globalEnv": [
-    "PORT",
+    "NODE_ENV",
+    "API_PORT",
     "AUTH_GOOGLE_ID",
     "AUTH_GOOGLE_SECRET",
     "AUTH_SECRET",
-    "AUTH_TRUST_HOST"
+    "AUTH_TRUST_HOST",
+    "NEXT_PUBLIC_API_URL"
   ],
   "pipeline": {
     "build": {
